fix col-6 not working on safari

--- a/src/web_ui/static/css/data_reading.css
+++ b/src/web_ui/static/css/data_reading.css
@@ -8,7 +8,9 @@ body {
     padding: 20px;
 }
 
-table, th, td {
+table,
+th,
+td {
     border-collapse: collapse;
 }
 
@@ -18,13 +20,14 @@ th {
 
 table {
     margin: auto;
- }
+}
 
-th, td {
+th,
+td {
     padding: 15px;
 }
 
-.detail > td{
+.detail>td {
     background-color: white !important;
     border-top: 0px !important;
     border-bottom: 1px solid #dee2e6;
@@ -33,3 +36,11 @@ th, td {
 .space-between {
     height: 10px;
 }
+
+.clickable {
+    cursor: pointer;
+}
+
+.accordion-toggle[aria-expanded="true"] .chev-down {
+    transform: rotate(180deg);
+  }
